Add login screen, no functionality

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+
+# areon
+Dockerfile
+Makefile
+nginxServerConfig
+
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
