--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expense-claims": "file:",
+    "lucide-react": "^0.483.0",
     "next": "15.2.2",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
