--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "drizzle-seed": "^0.3.1",
     "expense-claims": "file:",
     "next": "^15.2.2",
     "radix-ui": "^1.1.3",
