--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-super-user": "npx tsx backend/db/utils/defaultData.ts",
+    "db-reset": "rm local.db && npx drizzle-kit push"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
