--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "db":"npx drizzle-kit push",
+    "show-db": "npx drizzle-kit studio",
     "create-super-user": "npx tsx backend/db/utils/superAdminAccount.ts",
     "db-reset": "rm local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts"
   },
