Enhance login functionality to track new logins and refresh user data on successful login. Update UserContext to support standalone refresh function. Improve dashboard layout with logout functionality and code formatting.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db": "npx drizzle-kit push",
     "show-db": "npx drizzle-kit studio",
     "create-super-user": "npx tsx backend/db/utils/superAdminAccount.ts",
-    "db-reset": "rm local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts"
+    "db-reset": "rimraf local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
