--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db": "npx drizzle-kit push",
+    "db": "npx drizzle-kit push  && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts",
     "show-db": "npx drizzle-kit studio",
     "create-super-user": "npx tsx backend/db/utils/superAdminAccount.ts",
     "db-reset": "rimraf local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts"
