--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@libsql/client": "^0.15.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
