Refactor employee role classes to use local EmployeeType definition and improve code formatting
- Updated GeneralStaff, LineManager, and PayrollOfficer classes to import EmployeeType from utils instead of employeeRole.
- Reformatted class properties and methods for consistency.
- Added missing newline at the end of files.

Implement API routes for authentication and claims management

- Created POST route for user login with cookie-based authentication.
- Developed GET and POST routes for claims management, allowing users to fetch and create claims.
- Added middleware to protect routes and manage authentication state.

Enhance user fetching functionality in admin dashboard

- Implemented fetchAllUsers function to retrieve and serialize user data for admin management.

Update Next.js configuration for bundle analysis and type checking

- Integrated @next/bundle-analyzer for analyzing bundle size.
- Added type checking command to package.json scripts.

Remove unused API and type definitions

- Deleted obsolete API functions and type definitions from lib/api.ts and lib/types.ts.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "db": "npx drizzle-kit push  && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts",
     "show-db": "npx drizzle-kit studio",
     "create-super-user": "npx tsx backend/db/utils/superAdminAccount.ts",
-    "db-reset": "rimraf local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts"
+    "db-reset": "rimraf local.db && npx drizzle-kit push && npx tsx backend/db/utils/defaultData.ts && npx tsx backend/db/utils/superAdminAccount.ts",
+    "dev:full": "npm run db && npm run dev",
+    "typecheck": "tsc --noEmit",
+    "analyze": "ANALYZE=true next build",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.2.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
